# noaa_weather

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md  RELEASE.md  release-plz.toml  rustfmt.toml
.github/workflows/: cd.yaml  pull-request-validation.yml  release.yaml
docs/: README.md
docs/cli/: alerts.md  aviation.md  gridpoints.md  offices.md  points.md  products.md  radar.md  radio.md  stations.md  zones.md
examples/: basic_usage.rs  weather_alerts.rs
noaa_weather_cli/: CHANGELOG.md  Cargo.toml  README.md
noaa_weather_cli/src/: main.rs
noaa_weather_cli/src/commands/: alerts.rs  aviation.rs  gridpoints.rs  mod.rs  offices.rs  points.rs  products.rs  radar.rs  radio.rs  stations.rs  weather.rs  zones.rs
noaa_weather_cli/src/tables/: alerts.rs  aviation.rs  gridpoints.rs  mod.rs  offices.rs  points.rs  products.rs  radar.rs  radio.rs  stations.rs  zones.rs
noaa_weather_cli/src/utils/: format.rs  mod.rs  parse.rs  temperature.rs
noaa_weather_cli/tests/: alerts.rs  aviation.rs  gridpoints.rs  offices.rs  points.rs  products.rs  radar.rs  radio.rs  stations.rs  weather.rs  zones.rs
noaa_weather_client/: CHANGELOG.md  Cargo.toml  README.md
noaa_weather_client/examples/: basic_usage.rs  weather_alerts.rs
noaa_weather_client/src/: lib.rs
noaa_weather_client/src/apis/: alerts.rs  aviation.rs  configuration.rs  gridpoints.rs  mod.rs  offices.rs  points.rs  products.rs  radar.rs  radio.rs  stations.rs  zones.rs
noaa_weather_client/src/models/: active_alerts_count_response.rs  alert.rs  alert_atom_entry.rs  alert_atom_entry_author.rs  alert_atom_feed.rs  alert_atom_feed_author.rs  alert_certainty.rs  alert_collection.rs  alert_collection_geo_json.rs  alert_collection_geo_json_all_of_features.rs  alert_collection_json_ld.rs  alert_geo_json.rs  alert_geocode.rs  alert_json_ld.rs  alert_message_type.rs  alert_references_inner.rs  alert_scope.rs  alert_severity.rs  alert_status.rs  alert_types_response.rs  alert_urgency.rs  alert_xml_parameter.rs  alerts_active_count_200_response.rs  alerts_types_200_response.rs  area_code.rs  astronomical_data.rs  center_weather_advisory.rs  center_weather_advisory_collection_geo_json.rs  center_weather_advisory_collection_geo_json_all_of_features.rs  center_weather_advisory_geo_json.rs  city_coordinates.rs  cwsu_office.rs  geo_json_feature.rs  geo_json_feature_collection.rs  geo_json_geometry.rs  geo_json_line_string.rs  geo_json_multi_line_string.rs  geo_json_multi_point.rs  geo_json_multi_polygon.rs  geo_json_point.rs  (+110 more)
noaa_weather_client/src/utils/: mod.rs  serde.rs
references/: offices-metadata-psr.json  point-stations-az.json  radar-servers.json  radar-stations-type-profiler.json  radar-stations.json  tafs-kphx.xml
