[package]
name = "noaa_weather_cli"
version = "0.1.6"
edition = "2024"
description = "A CLI for the NOAA Weather API client."
publish = false
license = "MIT"
authors = ["Seferino Fernandez"]
repository = "https://github.com/seferino-fernandez/noaa_weather"
keywords = ["weather", "noaa", "nws", "cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/seferino-fernandez/noaa_weather"
documentation = "https://github.com/seferino-fernandez/noaa_weather"
readme = "README.md"

[[bin]]
name = "noaa-weather"
path = "src/main.rs"

[dependencies]
noaa_weather_client = { path = "../noaa_weather_client" }

clap = { version = "4.5.45", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.99"
serde_json = "1.0.142"
comfy-table = "7.1.4"
jiff = "0.2.15"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
