[package]
name = "noaa_weather_client"
version = "0.1.6"
edition = "2024"
description = "A client library for the NOAA weather.gov API"
license = "MIT"
authors = ["Seferino Fernandez"]
repository = "https://github.com/seferino-fernandez/noaa_weather"
keywords = ["weather", "noaa", "nws", "api"]
categories = ["api-bindings"]
homepage = "https://github.com/seferino-fernandez/noaa_weather"
readme = "README.md"

[dependencies]
quick-xml = { version = "0.38.3", features = ["serde", "serialize"] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = { version = "^3.14.0" }
url = "2.5.7"

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1.47.1", features = ["full"] }
