[package]
name = "noaa_weather_client"
version = "0.1.7"
edition = "2024"
description = "A client library for the NOAA weather.gov API"
license = "MIT"
authors = ["Seferino Fernandez"]
repository = "https://github.com/seferino-fernandez/noaa_weather"
keywords = ["weather", "noaa", "nws", "api"]
categories = ["api-bindings"]
homepage = "https://github.com/seferino-fernandez/noaa_weather"
readme = "README.md"

[dependencies]
quick-xml = { version = "0.39.0", features = ["serde", "serialize"] }
reqwest = { version = "0.13.1", features = ["json", "multipart", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "^3.16.1" }
url = "2.5.8"

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1.49.0", features = ["full"] }
