[package]
name = "noaa_weather_client"
version = "1.0.0"
edition = "2024"
description = "A client library for the NOAA weather.gov API"
license = "MIT"
authors = ["Seferino Fernandez"]
repository = "https://github.com/seferino-fernandez/noaa_weather"
keywords = ["weather", "noaa", "nws", "api"]
categories = ["api-bindings"]
homepage = "https://github.com/seferino-fernandez/noaa_weather"
readme = "README.md"

[dependencies]
quick-xml = { version = "0.39.2", features = ["serde", "serialize"] }
reqwest = { version = "0.13.2", features = ["json", "multipart", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.17.0" }
url = "2.5.8"

[features]
default = []
radio = []

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1.49.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
